--- a/index.html
+++ b/index.html
@@ -263,25 +263,25 @@
         <div class="container w-75 m-auto text-center">
             <div class="row">
                 <div class="col-md-3">
-                    <div class="section7-contnt">
+                    <div class="section7-contnt py-2">
                         <h2 class="h1 min-color">570</h2>
                         <h6>Download</h6>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="section7-contnt">
+                    <div class="section7-contnt py-2">
                         <h2 class="h1 min-color">570</h2>
                         <h6>Active User</h6>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="section7-contnt">
+                    <div class="section7-contnt py-2">
                         <h2 class="h1 min-color">570</h2>
                         <h6>Positive Feedback</h6>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="section7-contnt">
+                    <div class="section7-contnt py-2">
                         <h2 class="h1 min-color">570</h2>
                         <h6>+rating</h6>
                     </div>
