--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col-md-6 ">
                     <div class="hrader-img">
-                        <img class="img-fluid" src="./images/svg1.png" alt="" srcset="">
+                        <img class="img-fluid" src="./images/NoPath.png" alt="" srcset="">
                     </div>
                 </div>
             </div>
@@ -185,7 +185,7 @@
             <div class="row">
                 <div class="col-md-6 py-4 position-relative">
                     <div class="section3-img pt-3">
-                        <img class="img-fluid" src="./images/svg1.png" alt="" srcset="">
+                        <img class="img-fluid" src="./images/NoPath.png" alt="" srcset="">
                     </div>
                 </div>
                 <div class="col-md-6 py-5 ">
@@ -256,7 +256,7 @@
                 </div>
                 <div class="col-md-6 ">
                     <div class="section5-img ">
-                        <img class="img-fluid" src="./images/svg1.png" alt="" srcset="">
+                        <img class="img-fluid" src="./images/NoPath.png" alt="" srcset="">
                     </div>
                 </div>
 
